--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,31 @@
-canvas {
-  position: relative;
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap");
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
+}
+div{
+  width: 100%;
+  height: 100%; 
+}
+canvas { 
+  position:relative;
   width: 100%;
   height: 100%;
   background-color: rgb(12, 11, 18);
+}
+h1{ 
+  display: block;
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  height: 100%;
+  padding-top: 12%;
+  padding-left: 20%;
+  font-family: ;
+  align-items: center;
+  color: white;
+  background-color: rgb(2, 2, 3);
+  font-size:10rem;
 }
